# wyoming-nanowakeword

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.override.example.yml  compose.satellite.yml  compose.yml  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: ci.yml  release.yml
custom_components/nanowakeword/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  helpers.py  manifest.json  number.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/nanowakeword/translations/: en.json  pl.json
data/: agata_bcresnet_v4_lite.onnx  agata_bcresnet_v5.onnx  agata_bcresnet_v5_lite.onnx  agata_conformer_v1_lite.onnx  agata_conformer_v2_lite.onnx  agata_ebranchformer_v1_lite.onnx  agata_quartznet_v1.onnx  agata_quartznet_v1_lite.onnx  models.yaml
docs/: development.md
nanowakeword/: DOCS.md  Dockerfile  apparmor.txt  config.yaml
nanowakeword/rootfs/etc/services.d/nanowakeword/: run
scripts/: check_versions.py
share/nanowakeword/: models.example.yaml
tests/: test_asr_verify.py  test_handler.py  test_http_api.py  test_interpreters.py  test_models.py  test_settings.py  test_verification.py
tests_integration/: conftest.py  test_init.py
wyoming_nanowakeword/: __init__.py  __main__.py  asr_verify.py  fusion.py  handler.py  http_api.py  interpreters.py  models.py  settings.py  state.py
